<resources>

    <string name="app_name">anatome</string>
    <string name="tutorial_note">Create your first note by editing the template to the left of this note and clicking save!
        You can delete notes by pressing the bin at the bottom of said note.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="skip">SKIP</string>
    <string name="font_name_bariol">Bariol</string>
    <string name="font_name_helvetica">Helvetica</string>
    <string name="generic_title">Generic Title</string>
    <string name="generic_content">Generic Content</string>
    <string name="image_toolbox">Toolbox</string>
    <string name="image_idcard">ID Card</string>
    <string name="image_lock">Padlock</string>
    <string name="generic_name">name</string>
    <string name="title_activity_section">Section</string>
    <string name="title_activity_awdawd">Map</string>
    <string name="title_activity_play_list">PlayListActivity</string>
    <string name="playback_status_playing">Playing..</string>
    <string name="playback_status_paused">Paused</string>
    <string name="playback_status_stopped">Stopped</string>
    <string name="facebook_app_id">993489687372387</string>

</resources>
