<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_main_bg"
    tools:context="io.wellbeings.anatome.PreambleLock"
    android:orientation="vertical"
    android:padding="15dp"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/generic_title"
        android:id="@+id/preamble_header_lock"
        android:textColor="@color/main_accent_text"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic_content"
        android:id="@+id/preamble_information_lock"
        android:textColor="@color/main_accent_text"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="210dp"
        android:layout_height="200dp"
        android:id="@+id/toolbox"
        android:contentDescription="@string/image_lock"
        android:src="@drawable/lock"
        android:layout_weight="0.04" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Set Password"
        android:id="@+id/setpassword"
        android:layout_marginTop="20dp"
        android:theme="@android:style/Theme.Holo" />

</LinearLayout>
